# app-based-engine

./: CMakeLists.txt  README.md
data/glsl/: array_sum.comp
data/json/: vulkan_info.json
data/spirv/: array_sum.comp.spv
src/: App.cpp  App.hpp  BaseApp.cpp  BaseApp.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  HeadlessApp.hpp  StagingBuffer.cpp  StagingBuffer.hpp  WindowedApp.cpp  WindowedApp.hpp  defines.hpp  main.cpp  main_old.cpp  vkn.cpp  vkn.hpp  vulkan_init.cpp  vulkan_init.hpp
